[package]
name = "gkquad"
version = "0.0.2"
authors = ["Kogia-sima <orcinus4627@gmail.com>"]
license = "MIT"
description = "Numerical integration library for Rust"
homepage = "https://github.com/Kogia-sima/gkquad-rs"
repository = "https://github.com/Kogia-sima/gkquad-rs"
readme = "../README.md"
keywords = ["math", "numerics", "no_std", "integral", "quadrature"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gkquad"
path = "src/lib.rs"
test = false

[features]
default = ["std", "simd"]
simd = []
std = []
double = []

[dependencies]
smallvec = "1.2.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "single"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
