[package]
name = "gkquad"
version = "0.0.4"
authors = ["Kogia-sima <orcinus4627@gmail.com>"]
license = "MIT"
description = "Numerical integration library for Rust"
homepage = "https://github.com/Kogia-sima/gkquad-rs"
repository = "https://github.com/Kogia-sima/gkquad-rs"
readme = "../README.md"
keywords = ["math", "numerics", "no_std", "integral", "quadrature"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gkquad"
path = "src/lib.rs"
test = false

[features]
default = ["std", "simd"]
simd = []
std = []
double = []

[dependencies]
smallvec = "1.3.0"

[dev-dependencies.smbench]
git = "https://github.com/Kogia-sima/smbench"
default-features = false
features = ["argparse", "sysinfo"]

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "sphere"
required-features = ["double"]

[[test]]
name = "algorithms_double"
path = "tests/algorithms_double.rs"
required-features = ["double"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
